# ferrum-flow

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.yaml  config.yaml.example
.github/workflows/: docker.yml
migrations/: 20260428120000_create_signals.sql
src/: alpaca.rs  analytics.rs  data.rs  db.rs  lib.rs  main.rs  signal.rs
